[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motorsport-dashboard-platform"
version = "0.1.0"
description = "Configurable motorsport dashboard platform foundation written in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
mlsw = "motorsport_dashboard_platform.cli:main"
mlsw-editor = "motorsport_dashboard_platform.apps.editor_app:main"
mlsw-dash = "motorsport_dashboard_platform.apps.dash_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
