[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motorsport-dashboard-platform"
version = "0.1.0"
description = "Python-first configurable motorsport telemetry dashboard platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI Codex"}]
keywords = ["motorsport", "dashboard", "telemetry", "can", "fsae", "sim-racing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
mlsw-editor = "motorsport_dashboard_platform.editor.app:main"
mlsw-dash = "motorsport_dashboard_platform.dash.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motorsport_dashboard_platform = ["examples/*.json"]
